--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/estilo.css">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="./img/icono.png"/>
+        <link rel="icon" type="image/png" href="img/icono.png"/>
         <title>TP</title>
     </head>
     <body>
@@ -18,9 +18,9 @@
                 <a href="#" class="logo">Somos Jabon</a>
                 <div class="izq">
                     <a href="#" class="selected">Home</a>
-                    <a href="../nosotros.html">Nosotros</a>
-                    <a href="../productos.html">Productos</a>
-                    <a href="../contacto.html">Contacto</a>
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="productos.html">Productos</a>
+                    <a href="contacto.html">Contacto</a>
                 </div>
             </div>
         </div>
@@ -55,9 +55,9 @@
             </div>
             <div>
                 <nav>
-                    <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt="Instagram" height="20" width="20"></a>
-                    <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="./img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
-                    <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="./img/twitter.png" alt="Twitter" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="img/twitter.png" alt="Twitter" height="20" width="20"></a>
                 </nav>
             </div>
         </footer>
