--- a/contacto.html
+++ b/contacto.html
@@ -6,10 +6,10 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="../img/icono.png"/>
+    <link rel="icon" type="image/png" href="img/icono.png"/>
     <title>TP</title>
   </head>
   <body>
@@ -19,9 +19,9 @@
       <div class="container">
           <a href="#" class="logo">Somos Jabon</a>
           <div class="headerIzq">
-              <a href="../index.html">Home</a>
-              <a href="./nosotros.html">Nosotros</a>
-              <a href="./productos.html" >Productos</a>
+              <a href="index.html">Home</a>
+              <a href="nosotros.html">Nosotros</a>
+              <a href="productos.html" >Productos</a>
               <a href="#" class="selected">Contacto</a>
           </div>
       </div>
@@ -70,9 +70,9 @@
       </div>
       <div>
           <nav>
-              <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="../img/instagram.png" alt="Instagram" height="20" width="20"></a>
-              <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="../img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
-              <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="../img/twitter.png" alt="Twitter" height="20" width="20"></a>
+              <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram" height="20" width="20"></a>
+              <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
+              <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="img/twitter.png" alt="Twitter" height="20" width="20"></a>
           </nav>
       </div>
     </footer>
