--- a/nosotros.html
+++ b/nosotros.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/estilo.css">
+        <link rel="stylesheet" href="css/estilo.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="../img/icono.png"/>
+        <link rel="icon" type="image/png" href="img/icono.png"/>
         <title>TP</title>
     </head>
     <body>
@@ -17,10 +17,10 @@
             <div class="container">
                 <a href="#" class="logo">Somos Jabon</a>
                 <div class="headerIzq">
-                    <a href="../index.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#" class="selected">Nosotros</a>
-                    <a href="./productos.html">Productos</a>
-                    <a href="./contacto.html">Contacto</a>
+                    <a href="productos.html">Productos</a>
+                    <a href="contacto.html">Contacto</a>
                 </div>
             </div>
         </div>
@@ -48,9 +48,9 @@
             </div>
             <div>
                 <nav>
-                    <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="../img/instagram.png" alt="Instagram" height="20" width="20"></a>
-                    <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="../img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
-                    <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="../img/twitter.png" alt="Twitter" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.instagram.com" target="_blank"><img src="img/instagram.png" alt="Instagram" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.facebook.com" target="_blank"><img src="img/facebook.jpg" alt="Facebook" height="20" width="20"></a>
+                    <a class="redesindividual" href="http://www.twitter.com" target="_blank"><img src="img/twitter.png" alt="Twitter" height="20" width="20"></a>
                 </nav>
             </div>
         </footer>
