--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/css/estilo.css">
+        <link rel="stylesheet" href="css/estilo.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
                 <a href="#" class="logo">Somos Jabon</a>
                 <div class="headerIzq">
                     <a href="index.html">Home</a>
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="#" class="selected">Productos</a>
-                    <a href="contacto.html">Contacto</a>
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="#" class="selected">Productos</a>
+                        <a href="contacto.html">Contacto</a>
                 </div>
             </div>
         </div>
