--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div id="desc">
                         <p id="hola">¡Hola!</p>
                         <h1 id="titulo">Somos Jabon<br></h1>
-                        <form action="../nosotros.html" class="boton">
+                        <form action="nosotros.html" class="boton">
                         <input class="cool-btn" type="submit" value="Conocenos" />
                         </form>
                     </div>
